--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -103,6 +103,7 @@
 *** xref:reference/extensions/saxon.adoc[XQuery]
 *** xref:reference/extensions/xslt.adoc[XSLT]
 *** xref:reference/extensions/yaml-dsl.adoc[YAML DSL]
+*** xref:reference/extensions/zip-deflater.adoc[Zip Deflate Compression]
 *** xref:reference/extensions/zipfile.adoc[Zip File]// extensions: END
 ** xref:reference/components.adoc[Components]
 ** xref:reference/dataformats.adoc[Data formats]
