--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -43,6 +43,7 @@
 *** xref:reference/extensions/cxf-soap.adoc[CXF]
 *** xref:reference/extensions/cassandraql.adoc[Cassandra CQL]
 *** xref:reference/extensions/core-cloud.adoc[Cloud]
+*** xref:reference/extensions/controlbus.adoc[Control Bus]
 *** xref:reference/extensions/core.adoc[Core]
 *** xref:reference/extensions/cron.adoc[Cron]
 *** xref:reference/extensions/dataformat.adoc[Data Format]
